Fully completed the backend programming